samples/_failures_safe/1761091995_bc79f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1062b38e.c: In function ‘main’:
./samples/SAFE/__tmp_1062b38e.c:133:16: error: missing terminating " character
  133 |         printf("%s %s %
      |                ^~~~~~~~
./samples/SAFE/__tmp_1062b38e.c:133:9: error: expected expression at end of input
  133 |         printf("%s %s %
      |         ^~~~~~
./samples/SAFE/__tmp_1062b38e.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1062b38e.c:133:9: error: expected declaration or statement at end of input
